# claudelens

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  ANALYTICS_OPTIMIZATION_SUMMARY.md  BENCHMARKING_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  ERROR_DETECTION_IMPROVEMENTS.md  MISSING_DURATION_ANALYSIS.md  README.md  RESPONSE_TIME_IMPLEMENTATION_HANDOFF.md  SEARCH_HIGHLIGHTING_FIX.md  analyze_duplicate_content.py  analyze_message_flow.py  analyze_uuids.py  check_assistant_timestamps.py  check_fields.py  check_mongo_version.py  check_mongodb.py  check_orphaned_data.py  check_raw_data.py  check_remote_mongodb.py  check_request_ids.py  clear_test_messages.py  debug_message_format.py  docker-compose.override.yml  docker-compose.yml  find_recent_sessions.py  investigate_data_structure.py  investigate_sync_issue.py  optimize_analytics_queries.py  package-lock.json  pyproject.toml  run_test_sync.py  security-analysis-ownership.md  simulate_backend_error.py  (+31 more)
.github/: dependabot.yml
PRPs/: ai-prompt-library-enhancement-prd.md  ai-prompt-library-feature.md  backup-restore-feature-prd.md  backup-restore-implementation.md  claude-format-export-analysis.md  compression-implementation-plan.md  import-export-feature-prd.md  import-export-feature.md  multi-user-support.md  openid-authentication.md  pdf-export-implementation-plan.md  prompt-manager.md
backend/: .ruff.toml  check_orphaned_data.py  check_recent_rate_limits.py  cleanup_orphaned_data.py  create_test_api_key.py  fix_all_message_tests.py  fix_api_key_timezone.py  fix_message_tests.py  fix_session_tests.py  force_fix_api_key.py  pyproject.toml  pytest.ini  test_api_auth_flow.py  test_api_cascade.py  test_api_key_auth.py  test_auth_debug.py  test_cascade_deletion.py  test_middleware_fix.py  test_model_usage_fix.py  test_project_stats.py  test_rate_limit_debug.py  test_rate_limits_fix.py  test_robust_deletion.py  test_summary_optimization.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: admin.py  ai_settings.py  analytics.py  auth.py  backup.py  debug.py  export.py  import_export.py  ingest.py  messages.py  oidc.py  projects.py  prompts.py  prompts_backup.py  rate_limit_settings.py  rate_limits.py  restore.py  search.py  sessions.py  users.py  websocket.py
backend/app/core/: ai_config.py  config.py  custom_router.py  database.py  db_init.py  exceptions.py  logging.py  security.py  testcontainers_db.py
backend/app/middleware/: auth.py  forwarded_headers.py  logging.py  rate_limit.py  rate_limit_tracking.py  tenant.py
backend/app/models/: __init__.py  ai_settings.py  backup_job.py  backup_metadata.py  export_job.py  generation_template.py  import_job.py  message.py  oidc_settings.py  project.py  prompt.py  rate_limit_settings.py  rate_limit_usage.py  session.py  user.py
backend/app/schemas/: __init__.py  ai_generation.py  ai_settings.py  analytics.py  backup_schemas.py  common.py  export.py  import_schemas.py  ingest.py  message.py  oidc.py  project.py  prompt.py  rate_limit_settings.py  search.py  session.py  websocket.py
backend/app/services/: ai_service.py  analytics.py  auth.py  background_tasks.py  backup_service.py  compression_service.py  cost_calculation.py  export_service.py  file_service.py  import_service.py  ingest.py  ingest_debug.py  message.py  oidc_service.py  project.py  project_deletion.py  prompt.py  rate_limit_service.py  rate_limit_usage_service.py  realtime_integration.py  restore_service.py  rolling_message_service.py  search.py  session.py  storage_metrics.py  user.py  validation.py  websocket_manager.py
backend/migrations/: fix_orphaned_data.py  hierarchical_ownership_migration.py  remove_viewer_role.py
backend/scripts/: clean_sample_data.py  cleanup_orphaned_data.py  cleanup_orphaned_sessions.py  fix_session_costs.py  generate_sample_data.py  init_api_key.py  init_api_key_simple.py  init_local_user_with_password.py  init_user_with_password.py  reset_password.py  update_git_branch_indexes.py  update_text_index.py  verify_hierarchical_ownership.py  verify_ownership.py
backend/tests/: conftest.py  test_api_data_isolation.py  test_core_database.py  test_core_db_init.py  test_core_exceptions.py  test_core_testcontainers_db.py  test_data_ownership.py  test_data_ownership_unit.py  test_database.py  test_endpoints_backup.py  test_endpoints_ingest.py  test_endpoints_messages.py  test_endpoints_projects.py  test_endpoints_sessions.py  test_endpoints_websocket.py  test_integration_ingest_message.py  test_integration_search.py  test_integration_websocket.py  test_middleware_logging.py  test_middleware_rate_limit.py  test_services_analytics_branch.py  test_services_analytics_conversation_flow.py  test_services_analytics_cost_prediction.py  test_services_analytics_directory.py  test_services_analytics_error_tracking.py  test_services_analytics_message.py  test_services_analytics_session.py  test_services_analytics_session_depth.py  test_services_analytics_token_efficiency.py  test_services_backup.py  test_services_cost_calculation.py  test_services_ingest.py  test_services_ingest_debug.py  test_services_message.py  test_services_project.py  test_services_restore.py  test_services_restore_fixed.py  test_services_search.py  test_services_session.py  test_services_user.py  (+3 more)
backend/tests/fixtures/: rolling_service.py
cli/: README.md  pyproject.toml  pytest.ini
cli/claudelens_cli/: __init__.py  __main__.py  cli.py
cli/claudelens_cli/commands/: __init__.py  config.py  status.py  sync.py
cli/claudelens_cli/core/: __init__.py  claude_parser.py  config.py  data_handlers.py  retry.py  state.py  sync_engine.py  watcher.py
cli/tests/: test_cli.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  entrypoint.sh  init-mongo.js  nginx.conf  supervisord.conf
docs/: API.md  (+19 more)
mcp-server/: .env.example  IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml  test_mcp_server.py
mcp-server/claudelens_mcp/: __init__.py  api_client.py  server.py
(+349 files in other folders)
