[tool.poetry]
name = "claudelens-backend"
version = "0.1.0"
description = "ClaudeLens backend API"
authors = ["Your Name <email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
motor = "^3.3.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.20"
httpx = "^0.28.0"
aiofiles = "^24.1.0"
pytz = "^2025.1"
faker = "^37.0.0"
pymongo = "^4.6.0"
python-dateutil = "^2.9.0"
websockets = "^12.0"
litellm = "^1.74.15.post1"
openai = "^1.100.2"
tiktoken = "^0.11.0"
tenacity = "^9.1.2"
cryptography = "^45.0.6"
zstandard = "^0.22.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.3.0"
testcontainers = {extras = ["mongodb"], version = "^4.12.0"}
ruff = "^0.12.0"
mypy = "^1.6.0"
black = "^25.0.0"
isort = "^6.0.0"
pre-commit = "^4.0.0"
types-aiofiles = "^24.1.0.20250809"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Only check for critical errors (syntax, imports, undefined names)
select = ["E", "F", "I"]
ignore = ["E501"]  # line too long

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # Allow module level imports not at top in scripts

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
