[tool.poetry]
name = "claudelens-cli"
version = "0.1.0"
description = "ClaudeLens CLI tool for syncing Claude conversations"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
httpx = "^0.25.0"
rich = "^13.6.0"
watchdog = "^3.0.0"
pydantic = "^2.4.0"
aiofiles = "^23.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
claudelens = "claudelens_cli.__main__:main"