[tool.poetry]
name = "claudelens-cli"
version = "0.1.0"
description = "ClaudeLens CLI tool for syncing Claude conversations"
authors = ["Your Name <email@example.com>"]
readme = "README.md"
packages = [{include = "claudelens_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.0"
httpx = "^0.28.0"
rich = "^13.6.0"
watchdog = "^6.0.0"
pydantic = "^2.10.0"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.12.0"
mypy = "^1.6.0"
types-aiofiles = "^24.1.0.20250801"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
claudelens = "claudelens_cli.__main__:main"

[tool.ruff]
line-length = 88
# Only check for critical errors (syntax, imports, undefined names)
select = ["E", "F", "I"]
ignore = ["E501"]  # line too long
target-version = "py311"