[project]
name = "claudelens-mcp"
version = "0.1.0"
description = "MCP server for ClaudeLens - Claude conversation analytics"
authors = [{ name = "ClaudeLens Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
claudelens-mcp = "claudelens_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
